Access user directly instead of through token, consequences?

--- a/app/Resources/views/layout.twig
+++ b/app/Resources/views/layout.twig
@@ -43,7 +43,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                {% set user = app.security.token.user %}
+                                {% set user = app.user %}
                                     <table class="table table-striped user-information">
                                         <tbody>
                                             <tr>
